Changing services to handle reactive types